Add prettier to vscode

--- a/config/vscode-settings.json
+++ b/config/vscode-settings.json
@@ -4,5 +4,12 @@
     "editor.renderWhitespace": "all",
     "html.autoClosingTags": false,
     "editor.fontSize": 14,
-    "editor.rulers": [120]
+    "editor.rulers": [
+        120
+    ],
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.formatOnSave": true,
+    "explorer.openEditors.visible": 0
 }
