--- a/config/vscode-settings.json
+++ b/config/vscode-settings.json
@@ -8,7 +8,6 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.formatOnSave": true,
   "explorer.openEditors.visible": 0,
   "php.validate.executablePath": "/usr/bin/php",
   "window.zoomLevel": 0,
@@ -17,5 +16,6 @@
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.multiCursorModifier": "ctrlCmd"
+  "editor.multiCursorModifier": "ctrlCmd",
+  "calva.showCalvaSaysOnStart": false
 }
